加入loading,相对路径

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -204,6 +204,7 @@
   height:27px;
   background-size: contain;
   margin-bottom: 25px;
+  background-repeat: no-repeat;
   &.sex{
     background-image: url(../img/form-name-sex.png);
     width: 149px;
